terraform/security_groups.tf
# security_groups.tf
resource "aws_security_group" "sg" {
  name        = "allow_web_traffic"
  description = "Allow traffic on port 3000"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
